# bd_metadados

./: .python-version
backend/: pyproject.toml  pytest.ini
backend/authentication/: admin.py  apps.py  models.py  tests.py
backend/authentication/migrations/: 0001_initial.py
backend/backend/: api.py  settings.py  urls.py
